# project-eks-argocd

./: .gitignore  README.md  docker-compose.yml
app/: .gitignore  pyproject.toml
app/tests/: conftest.py  test_endpoints.py
app/voting/: config.py  db.py  main.py  models.py  schemas.py
app/voting/routers/: health.py  polls.py
argocd/: 00-root.yaml  01-root.yaml
argocd/01-bootstrap/: 01-projects.yaml  02-platform.yaml  03-tenants.yaml
argocd/02-projects/: 00-platform.yaml  team-a.yaml  team-b.yaml
argocd/04-tenant/: todo-app.yaml  voting-app-dev.yaml
argocd/apps/: 00-project-platform.yaml  00-project-voting.yaml  01-eso.yaml  02-eso-resources.yaml  03-karpenter.yaml  04-karpenter-nodes.yaml  05-albc.yaml  06-gateway-api-crds.yaml  06-istio-base.yaml  07-istiod.yaml  08-istio-cni.yaml  09-ztunnel.yaml  10-istio-gateway.yaml  albc.yaml  karpenter-nodes.yaml  karpenter.yaml  kube-prometheus-stack.yaml  prometheus-operator-crds.yaml  tg-binding.yaml  values-kps.yaml  voting-app.yaml
argocd/bootstrap/: 01-projects.yaml  02-platform-capabilities.yaml  02-platform.yaml  03-tenants.yaml  (+1 more)
docs/: 01-data.md  01-infra.md  02-app.md  03-helm.md  05-eks.md  05-infra.md  06-argocd.md  cap.md  monitoring.md  plan.md  security.md  test.md  v5.md
infra/: 01-variables.tf  02-locals.tf  04-outputs.tf  10-vpc.tf  11-eks.tf  12-eks-karpenter.tf  13-eks-csi.tf  13-eks-eso.tf  14-eks-albc.tf  14-eks-argocd.tf  15-eks-eso.tf  15-eks-karpenter.tf  16-eks-albc.tf  16-eks-loki.tf  backend.hcl.example  terraform.tfvars.example
tenants/: team-a.json  team-b.json
(+215 files in other folders)
