[project]
name = "voting"
version = "0.1.0"
description = "voting service backend"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.50.0",
    "sqlalchemy==2.0.51",
    "psycopg[binary]==3.3.4",
    "pydantic-settings==2.14.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["voting*"]
